Update Errai to 4.0.0-SNAPSHOT, GWT 2.8.0-beta1, and Java 8.